--- a/frontend-ui/src/app/pages/project-detail/project-detail.component.scss
+++ b/frontend-ui/src/app/pages/project-detail/project-detail.component.scss
@@ -148,8 +148,14 @@
     }
 
     .mat-mdc-tab-label {
+      .mdc-tab__text-label {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
       mat-icon {
-        margin-right: 8px;
+        margin: 0 !important;
       }
     }
   }
